--- a/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
@@ -1,8 +1,6 @@
 {{ define "repo/pulls/fragments/pullCompareBranches" }}
     <div id="patch-upload">
-        <label for="targetBranch" class="dark:text-white"
-            >select a branch</label
-        >
+        <label for="targetBranch" class="dark:text-white">select a branch</label>
         <div class="flex flex-wrap gap-2 items-center">
             <select
                 name="sourceBranch"
@@ -26,6 +24,11 @@
                 {{ end }}
             </select>
         </div>
+    </div>
+
+    <div class="flex items-center gap-2">
+      <input type="checkbox" id="isStacked" name="isStacked" value="on">
+      <label for="isStacked" class="my-0 py-0 normal-case font-normal">Submit as stacked PRs</label>
     </div>
 
     <p class="mt-4">
