--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -7,6 +7,7 @@
                 name="viewport"
                 content="width=device-width, initial-scale=1.0"
             />
+            <meta name="htmx-config" content='{"includeIndicatorStyles": false}'>
             <script src="/static/htmx.min.js"></script>
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
             <title>{{ block "title" . }}{{ end }} · tangled</title>
