--- a/appview/pages/templates/user/fragments/editPins.html
+++ b/appview/pages/templates/user/fragments/editPins.html
@@ -3,12 +3,16 @@
     <form
         hx-post="/profile/pins"
         hx-disabled-elt="#save-btn,#cancel-btn"
-        hx-swap="none">
+        hx-swap="none"
+        hx-indicator="#spinner">
       <div class="flex items-center justify-between mb-2">
         <p class="text-sm font-bold p-2 dark:text-white">SELECT PINNED REPOS</p>
         <div class="flex items-center gap-2">
           <button id="save-btn" type="submit" class="btn px-2 flex items-center gap-2 no-underline text-sm">
             {{ i "check" "w-3 h-3" }} save 
+            <span id="spinner" class="group">
+              {{ i "loader-circle" "w-3 h-3 animate-spin hidden group-[.htmx-request]:inline" }}
+            </span>
           </button>
           <a href="/{{.LoggedInUser.Did}}" class="w-full no-underline hover:no-underline">
             <button id="cancel-btn" type="button" class="btn px-2 w-full flex items-center gap-2 no-underline text-sm">
