--- a/appview/pages/templates/repo/issues/fragments/issueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/issueComment.html
@@ -38,13 +38,14 @@
         {{ i "pencil" "w-4 h-4" }}
       </button>
       <button 
-        class="btn px-2 py-1 text-sm text-red-500"
+        class="btn px-2 py-1 text-sm text-red-500 flex gap-2 items-center group"
         hx-delete="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/"
         hx-confirm="Are you sure you want to delete your comment?"
         hx-swap="outerHTML"
         hx-target="#comment-container-{{.CommentId}}"
         >
         {{ i "trash-2" "w-4 h-4" }}
+        {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
       </button>
       {{ end }}
 
