--- a/appview/pages/templates/repo/issues/new.html
+++ b/appview/pages/templates/repo/issues/new.html
@@ -5,6 +5,7 @@
         hx-post="/{{ .RepoInfo.FullName }}/issues/new"
         class="mt-6 space-y-6"
         hx-swap="none"
+        hx-indicator="#spinner"
     >
         <div class="flex flex-col gap-4">
             <div>
@@ -22,7 +23,12 @@
                 ></textarea>
             </div>
             <div>
-                <button type="submit" class="btn">create</button>
+                <button type="submit" class="btn flex items-center gap-2">
+                    create
+                    <span id="spinner" class="group">
+                      {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
+                    </span>
+                </button>
             </div>
         </div>
         <div id="issues" class="error"></div>
