--- a/appview/pages/templates/repo/pulls/fragments/pullNewComment.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullNewComment.html
@@ -7,23 +7,32 @@
   </div>
   <form
     hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/round/{{ .RoundNumber }}/comment"
+    hx-indicator="#create-comment-spinner"
     hx-swap="none"
-    class="w-full flex flex-wrap gap-2">
+    class="w-full flex flex-wrap gap-2"
+  >
     <textarea
         name="body"
         class="w-full p-2 rounded border border-gray-200"
-        placeholder="Add to the discussion..."></textarea>
+        placeholder="Add to the discussion..."></textarea
+    >
     <button type="submit" class="btn flex items-center gap-2">
-      {{ i "message-square" "w-4 h-4" }} comment
+        {{ i "message-square" "w-4 h-4" }}
+        <span>comment</span>
+        <span id="create-comment-spinner" class="group">
+          {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
+        </span>
     </button>
-    <button 
-      type="button" 
-      class="btn flex items-center gap-2" 
+    <button
+      type="button"
+      class="btn flex items-center gap-2 group"
       hx-get="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/round/{{ .RoundNumber }}/actions"
       hx-swap="outerHTML"
-      hx-target="#pull-comment-card-{{ .RoundNumber }}">
+      hx-target="#pull-comment-card-{{ .RoundNumber }}"
+    >
       {{ i "x" "w-4 h-4" }}
       <span>cancel</span>
+      {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
     </button>
     <div id="pull-comment"></div>
   </form>
